# moneygram-access-wallet-mvp

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wallet.css  wallet.html  wallet.js  wallet_server.py
