[tool.poetry]
name = "moneygram-access-wallet-mvp"
version = "0.1.0"
description = "An MVP wallet integrated with MoneyGram Access"
authors = ["Stellar Development Foundation <partnerships@stellar.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
requests = "*"
stellar-sdk = "*"
watchdog = "^2.1.9"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
